# discordXlol

./: .gitignore  .gitmodules  .replit  README.md  bot_owner_id.txt  config_example.json  core.py  dependencies_py.txt  init.bat  init.sh  league_api.py  load_from_json.py  main.py  pyproject.toml  requirements.txt  riot.txt  run.bat  run.sh  save_to_json.py  setup.bat  setup.py  setup.sh  summoners.py
queries/: data.sql  database.sql  insert_match.sql  insert_participant.sql  insert_participant_team.sql
scripts/: run.bat  run.sh  setup.bat  setup.sh
src/: __init__.py  core.py  database.py  league_api.py  load_from_json.py  main.py  match.py  matches.py  migration_load_from_json.py  migration_save_to_json.py  save_to_json.py  setup.py  summoner.py  summoners.py  table_file.py  util.py
src/cache/: __init__.py  cache.py  core.py  match.py  summoner.py
src/config/: __init__.py
src/db/: __init__.py  core.py  database.py  lobby.py  match.py  summoner.py  team.py
src/lib/: __init__.py  config.py
src/lib/db/: __init__.py  core.py  match.py  summoner.py
src/lib/ddragon/: __init__.py  core.py
src/lib/lol/: __init__.py  core.py  match.py  summoner.py
src/lol/: __init__.py  core.py  match.py  summoner.py  tournament.py
src/lol_api/: __init__.py  lol_api.py  match.py  summoner.py
src/queries/: database.sql  insert_match.sql  insert_participant.sql  insert_participant_team.sql
