[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["peTheProgrammer <peTheProgrammer@gmail.com>"]
description = ""
name = "src"
version = "0.1.0"
[tool.poetry.dependencies]
aiosqlite = "^0.17.0"
python = "^3.8"
requests = "^2.27.1"
py-cord = "2.0.0b7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
